WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294611
[tables] ASSERT in WebCore::RenderTableSection::layoutRows (needsLayout)
https://bugs.webkit.org/show_bug.cgi?id=294611
Summary
[tables] ASSERT in WebCore::RenderTableSection::layoutRows (needsLayout)
alan
Reported
2025-06-17 08:04:16 PDT
<
rdar://153541166
>
Attachments
[fast-cq]Patch
(5.60 KB, patch)
2025-06-17 09:20 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-06-17 09:20:44 PDT
Created
attachment 475587
[details]
[fast-cq]Patch
EWS
Comment 2
2025-06-17 11:21:15 PDT
Committed
296328@main
(e9c380b9f2c8): <
https://commits.webkit.org/296328@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 475587
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-06-17 11:22:16 PDT
<
rdar://problem/153659485
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug